GNOME Bugzilla – Bug 779589
Emit GdMainBox::selection-changed only after updating the selection
Last modified: 2017-03-06 00:07:10 UTC
Deleting an item from the selection mode leads to: ** (gnome-photos:7800): CRITICAL **: photos_base_item_can_trash: assertion 'PHOTOS_IS_BASE_ITEM (self)' failed ** (gnome-photos:7800): CRITICAL **: photos_base_item_get_default_app_name: assertion 'PHOTOS_IS_BASE_ITEM (self)' failed (gnome-photos:7800): GLib-GObject-WARNING **: invalid (NULL) pointer instance (gnome-photos:7800): GLib-GObject-CRITICAL **: g_signal_connect_object: assertion 'G_TYPE_CHECK_INSTANCE (instance)' failed (gnome-photos:7800): GLib-GObject-CRITICAL **: g_object_ref: assertion 'G_IS_OBJECT (object)' failed ** (gnome-photos:7800): CRITICAL **: photos_base_item_is_collection: assertion 'PHOTOS_IS_BASE_ITEM (self)' failed ** (gnome-photos:7800): CRITICAL **: photos_base_item_is_collection: assertion 'PHOTOS_IS_BASE_ITEM (self)' failed ** (gnome-photos:7800): CRITICAL **: photos_base_item_is_favorite: assertion 'PHOTOS_IS_BASE_ITEM (self)' failed ** (gnome-photos:7800): CRITICAL **: photos_base_item_get_default_app_name: assertion 'PHOTOS_IS_BASE_ITEM (self)' failed (gnome-photos:7800): GLib-GObject-WARNING **: invalid (NULL) pointer instance (gnome-photos:7800): GLib-GObject-CRITICAL **: g_signal_handler_disconnect: assertion 'G_TYPE_CHECK_INSTANCE (instance)' failed (gnome-photos:7800): GLib-GObject-CRITICAL **: g_object_unref: assertion 'G_IS_OBJECT (object)' failed
Reassigning from gnome-photos to libgd.
(In reply to Debarshi Ray from comment #0) > Deleting an item from the selection mode leads to: It also happens if the item behind a selected widget is deleted out-of-band. eg., from Files. This is caused by GdMainBox::selection-changed being emitted before the list of selected child widgets got updated.
Created attachment 347263 [details] [review] main-box, main-icon-box: Emit selection-changed with updated selection
Review of attachment 347263 [details] [review]: Looks good to me.
Comment on attachment 347263 [details] [review] main-box, main-icon-box: Emit selection-changed with updated selection Thanks for another quick review, Cosimo. Pushed to master.